# Marin-waifu-Personalized-ai-assistant

./: .gitignore  LICENSE  README.md  main.py  requirements.txt
agent/: executor.py
api/: routes.py
brain/: engine.py
core/: character.py  persona.py  settings.py
data/: marin_persona.json
desktop/: BUILD.md  Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json
desktop/src/: main.rs
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AvatarEngine.jsx  ChatPanel.jsx
frontend/src/engine/: avatar.js
frontend_old/: index.html
memory/: core.py  emotion.py
plugins/: base.py
services/: proactive.py
static/: index.html
voice/: pipeline.py
