[package]
name = "marin"
version = "1.0.0"
description = "Marin AI Companion Desktop App"
authors = ["Marin Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
